--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "TEST BTS.id ",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "dev": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "marufben@gmail.com",
